# conveoconfi

./: .coverage  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/conveoconfi/: __init__.py  config_files.py
tests/: test_config_creation.py  test_import.py  test_readme.py  test_source_project_compatibility.py
