[project]
name = "conveoconfi"
version = "0.1.0"
description = "Reusable YAML template-backed configuration file helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pytest>=9.1.0",
]
